--- a/style.css
+++ b/style.css
@@ -2,68 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
 }
-.ecran{
+.acran{
     width: 100%;
     height: 100vh;
     background-image: url(media/bg3.png);
     background-position: center;
     background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-.carte{
-    width: 90%;
-    max-width: 440px;
-    color: aliceblue;
-    text-align: center;
-    padding: 50px 30px;
-    border: 1px solid rgba(255,255,255,0.3);
-    background: rgba(255,255,255,0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 6px;rgba(0,0,0,0.1);
-    backdrop-filter: blur(5px);
-
-}
-.carte image{
-    width: 100px;
-    border-radius: 50%;
-}
-.carte h2{
-    font-size: 50px;
-    font-weight: 600px;
-    margin-top: 20px; 
-}
-.carte p{
-    font-size: 20px;
-    margin: 10px auto;
-    max-width: 330px;
-}
-.carte .reseau image{
-    width: 40px;
-    border-radius: 50%;
-    margin: 10px 5px;
-}
-.bouton {
-    text-decoration; none;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: 700;
-    background: #FFF;
-    color: blueviolet;
-    padding: 10px 30px;
-    border-radius: 30px;
-    margin: 30px 0 10px;
-}
-.about {  
-    width: 90%;
-    max-width: 440px;
-    color:blue;
-    text-align: center;
-    padding: 50px 30px;
-    border: 1px solid rgba(255,255,255,0.3);
-
-}
-
